# stm32g4-cpp-template

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  stm32g431.svd
app/: CMakeLists.txt  main.cpp  startup.cpp  stm32g431cb.ld  syscalls.cpp
cmake/: arm-none-eabi-toolchain.cmake
lib/: .clang-tidy  CMakeLists.txt
lib/cmsis/: CMakeLists.txt
lib/cmsis-device/: CMakeLists.txt
lib/hal/: CMakeLists.txt
